<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8ab39"
    android:paddingBottom="10dp"

    tools:context=".UserManualActivity">
    <TextView
        android:id="@+id/About_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/audiowide"
        android:text="User Manual"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"

        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="TODO"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/convert_textv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:padding="10dp"
        android:text="Rate"

        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/strok"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/audiowide"
                        android:text="tip"
                        android:textColor="#a134d3"
                        android:textSize="20sp"
                        android:textStyle="bold"></TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="15dp"
                        android:paddingTop="5dp"
                        android:text="You can add text from multiple images one after the other and the extracted text will be added in the panel along with a page seperator every time you add a new image"
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/audiowide"
                        android:text="How To Use"
                        android:textColor="#a134d3"
                        android:textSize="20sp"
                        android:textStyle="bold"></TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:text="1.tap here and select fonts from the drop down list.."
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>
                    <ImageView
                        android:id="@+id/imagef"
                        android:layout_width="300dp"
                        android:layout_height="300dp"

                        ></ImageView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:text="@string/manual_1"
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>
                    <ImageView
                        android:id="@+id/img6"
                        android:layout_width="300dp"
                        android:layout_height="300dp"

                        ></ImageView>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:text="@string/manual_2"
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>
                    <ImageView
                        android:id="@+id/img7"
                        android:layout_width="300dp"
                        android:layout_height="300dp"

                        ></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:text="@string/manual_3"
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>
                    <ImageView
                        android:id="@+id/img8"
                        android:layout_width="300dp"
                        android:layout_height="230dp"

                        ></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:text="@string/manual_4"
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>
                    <ImageView
                        android:id="@+id/img9"
                        android:layout_width="300dp"
                        android:layout_height="300dp"

                        ></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:text="@string/manual_5"
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:text="@string/manual_6"
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>
                    <ImageView
                        android:id="@+id/img11"
                        android:layout_width="300dp"
                        android:layout_height="300dp"

                        ></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:text="@string/manual_7"
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>
                    <ImageView
                        android:id="@+id/img12"
                        android:layout_width="300dp"
                        android:layout_height="300dp"

                        ></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:text="@string/manual_8"
                        android:textColor="#000000"
                        android:textSize="13sp"></TextView>
                    <TextView
                        android:id="@+id/copy"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/button_style"
                        android:elevation="8dp"
                        android:fontFamily="@font/andada"
                        android:gravity="center"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="Assignment location"
                        android:textAllCaps="false"
                        android:textColor="@color/black"></TextView>








                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>